--- a/css/header/navigation/navigation.css
+++ b/css/header/navigation/navigation.css
@@ -30,19 +30,20 @@
 @media (max-width: 830px) {
   .navigation {
     display: none;
+    width: 100%;
+    left: 0;
+    right: 0;
   }
 
   .navigation_active {
     display: block;
-    order: 2;
-    width: 100%;
-    position: relative;
   }
 
   .navigation__list {
     position: absolute;
     left: 0;
     right: 0;
+    top: 107px;
     z-index: 6;
     flex-direction: column;
     align-items: center;
@@ -73,7 +74,14 @@
   .navigation__list {
     gap: 26px;
     background-color: #1B1A1B;
-    padding: 37px 0;
+    top: 71px;
+    position: static;
+    z-index: 6;
+    flex-direction: column;
+    align-items: center;
+    gap: 26px;
+    background-color: #1B1A1B;
+    padding: 0;
   }
 
   .navigation__link {
